WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294966
[Skia] Symbols with the emoji variation selector are rendered with the text version
https://bugs.webkit.org/show_bug.cgi?id=294966
Summary
[Skia] Symbols with the emoji variation selector are rendered with the text v...
Carlos Garcia Campos
Reported
2025-06-25 03:42:54 PDT
It can be reproduced by opening
https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt
for example. We should be using the emoji version in most the cases, but the text version is used. This regressed with the switch to Skia.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-06-25 03:49:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47179
Michael Catanzaro
Comment 2
2025-06-25 07:06:05 PDT
***
Bug 290996
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2025-06-26 04:15:35 PDT
Committed
296658@main
(718cbaab72f8): <
https://commits.webkit.org/296658@main
> Reviewed commits have been landed. Closing PR #47179 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-06-26 04:16:14 PDT
<
rdar://problem/154383759
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug